v106